; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/xilinx_hwicap/extr_fifo_icap.c_fifo_icap_fifo_read.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/xilinx_hwicap/extr_fifo_icap.c_fifo_icap_fifo_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hwicap_drvdata = type { i32, i64 }

@XHI_RF_OFFSET = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [15 x i8] c"fifo_read: %x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hwicap_drvdata*)* @fifo_icap_fifo_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fifo_icap_fifo_read(%struct.hwicap_drvdata* %0) #0 {
  %2 = alloca %struct.hwicap_drvdata*, align 8
  %3 = alloca i32, align 4
  store %struct.hwicap_drvdata* %0, %struct.hwicap_drvdata** %2, align 8
  %4 = load %struct.hwicap_drvdata*, %struct.hwicap_drvdata** %2, align 8
  %5 = getelementptr inbounds %struct.hwicap_drvdata, %struct.hwicap_drvdata* %4, i32 0, i32 1
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @XHI_RF_OFFSET, align 8
  %8 = add nsw i64 %6, %7
  %9 = call i32 @in_be32(i64 %8)
  store i32 %9, i32* %3, align 4
  %10 = load %struct.hwicap_drvdata*, %struct.hwicap_drvdata** %2, align 8
  %11 = getelementptr inbounds %struct.hwicap_drvdata, %struct.hwicap_drvdata* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = load i32, i32* %3, align 4
  %14 = call i32 @dev_dbg(i32 %12, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32 %13)
  %15 = load i32, i32* %3, align 4
  ret i32 %15
}

declare dso_local i32 @in_be32(i64) #1

declare dso_local i32 @dev_dbg(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
